Fixed bug with background overflow

--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,6 @@ body {
 	height: 100vh;
 	margin: 0;
 	font-family: 'ABeeZee', sans-serif;
-	overflow: hidden;
 }
 div.container
 {
@@ -23,7 +22,6 @@ section.page
 	width:100vw;
 	height:100vh;
 	scroll-snap-align: start;
-	overflow:hidden;
 
 }
 .expand {
@@ -147,8 +145,8 @@ span.shadowMaskRev {
 .grid {
 	z-index: 1;
 	position: absolute;
-	width: 200vw;
-	height: 200vh;
+	width: 300vw;
+	height: 300vh;
 	background-size: 10vw 10vw;
 	backdrop-filter: blur(20px) brightness(0.3);
 	background-image: linear-gradient(to right, rgba(100,100,100,0.2) 2px,transparent 2px), linear-gradient(to bottom, rgba(100,100,100,0.2) 2px, transparent 2px);
